export/v1.0.7a/changelog.md
| Version | Code | English | 
| - | - | - |
| V1.0.7a | CODE | English |
| V1.0.7a | V1.0.7a_1 | Fixed flight animation of later gynes. |
| V1.0.7a | V1.0.7a_2 | Easier building requirements for the recycler. |
| V1.0.7a | V1.0.7a_3 | Fixed a tiling problem in a toxic wasteland ground |
| V1.0.7a | V1.0.7a_4 | Imrpoved dissolver and larva booster functionality to prevent them from getting stuck |
| V1.0.7a | V1.0.7a_5 | All dissolver recipes cost only 1 acid now. |
| V1.0.7a | V1.0.7a_6 | Fixed an error with plants to breaked being able to save. |
| V1.0.7a | V1.0.7a_7 | Fixed acid press wind down animation. |
| V1.0.7a | V1.0.7a_8 | "Ghost trails" (command trails that lost their owner) are now cleaned up on load and will be less spooky. |
| V1.0.7a | V1.0.7a_9 | Fixed a few recycler yields, giving the proper liquid. |
| V1.0.7a | V1.0.7a_10 | Fixed unmineable ancient deposits (they will be removed) |
| V1.0.7a | V1.0.7a_11 | Fixed a nullref with launched ants, causing them to be stuck mid air. |
| V1.0.7a | V1.0.7a_12 | The stockpile gate is unlocked way earlier in the tech tree and no longer costs yellow diamonds. |
| V1.0.7a | V1.0.7a_13 | Placing building on an ant ending its command trail doesn't freeze the game anymore |
| V1.0.7 | V1.0.7_1 | Fixed build progress billboard showing inside a few buildings. |
| V1.0.7 | V1.0.7_2 | Added a message when a building requires a dispenser. |
| V1.0.7 | V1.0.7_3 | Fixed dissolver being able to receive acid directly. |
| V1.0.7 | V1.0.7_4 | Fixed possibility of the facility getting stuck with some recipes. |
| V1.0.7 | V1.0.7_5 | Recycler should now pile-up its yield a bit more efficiently. |
| V1.0.7 | V1.0.7_6 | Fixed sentinels not being able to mine. |
| V1.0.7 | V1.0.7_7 | Added a few missing mining animations. |
| V1.0.7 | V1.0.7_8 | Fixed inventor T3 incorrect minimap mesh layer. |
| V1.0.7 | V1.0.7_9 | Fixed crystal duping with wafer in the deconstructor. |
| V1.0.7 | V1.0.7_10 | Fix for a save breaking bug when you've completed all tasks. |
| V1.0.7 | V1.0.7_11 | Increased the amount of blubber found in toxic mold. |
| V1.0.7 | V1.0.7_12 | Decreased blubber required for acid, increased amount of acid gained. |
| V1.0.7 | V1.0.7_13 | Made the idea requiring acid collection easier. |
| V1.0.7 | V1.0.7_14 | Fixed ants skipping action points when high speed/low framerate |
| V1.0.7 | V1.0.7_15 | Increased fluid container capacity, changed how to sphere size is calculated. |
| V1.0.7 | V1.0.7_16 | Fixed jet drone not being able to do anything. |
| V1.0.7 | V1.0.7_17 | Changed main trail description in English, no longer costs the notorious yellow diamond. |
| V1.0.7 | V1.0.7_18 | Tweaked recycler yields for a few ants (watch out some might drop acid). |
| V1.0.7 | V1.0.7_19 | Smaller changes and optimizations. |
| V1.0.6a | V1.0.6a_1 | Fixed broken wafer recipe. |
| V1.0.6 | V1.0.6_1 | Fixed two instances of possible savegame corruption |
| V1.0.6 | V1.0.6_2 | Added settings: VSync, FPS Limit, World Volume, Invert Cam |
| V1.0.6 | V1.0.6_3 | Render scale setting isn't ignored anymore on game start |
| V1.0.6 | V1.0.6_4 | Can now scroll to top part of the tech tree when using small/tiny UI Scale |
| V1.0.6 | V1.0.6_5 | Floor Tile Eraser now also removes incomplete floortiles |
| V1.0.5 | V1.0.5_1 | Fixed a few wrong translations |
| V1.0.5 | V1.0.5_2 | Added missing credits |
| V1.0.5 | V1.0.5_3 | Fixed a bug with the counter gate not working and causing not being able to save after having started a new colony without first quitting the game.  |
| V1.0.5 | V1.0.5_4 | Fixed a bug with empty pod workers being able to block the gyne cocoon, halting its progress. |
| V1.0.5 | V1.0.5_5 | Fixed the tech tree showing a black screen on small resolutions. |
| V1.0.5 | V1.0.5_6 | Rearranged some things in the tech tree, timer gate and caste gate are easier to unlock. |
| V1.0.5 | V1.0.5_7 | Made "Flying larvae" objective easier. |
| V1.0.5 | V1.0.5_8 | Fixed workshop collider |
| V1.0.5 | V1.0.5_9 | Fixed "new" UI element displayed on gate while it should be gone. |
| V1.0.4 | V1.0.4_1 | Added a missing splash screen |
| V1.0.4 | V1.0.4_2 | Fixed an issue with settings fond in Asian languages. |
| V1.0.4 | V1.0.4_3 | Fixed a bug causing a crash. |
| V1.0.3 | V1.0.3_1 | Updated a few tutorial videos |
| V1.0.3 | V1.0.3_2 | Greatly reduced larva booster process time. |
| V1.0.3 | V1.0.3_3 | Added Chinese logo in game |
| V1.0.3 | V1.0.3_4 | Rebalanced queen energy requirement and added more steps |
| V1.0.3 | V1.0.3_5 | Other smaller fixes and tweaks |
| V1.0.2 | V1.0.2_1 | Fixed several bugs causing crashes |
| V1.0.2 | V1.0.2_2 | Buffed ant launcher strength |
| V1.0.2 | V1.0.2_3 | Buffed desert plants fruit |
| V1.0.2 | V1.0.2_4 | Nerfed inventor tower |
| V1.0.2 | V1.0.2_5 | Changed pod workers old timing |
| V1.0.2 | V1.0.2_6 | Fixed tooltip sometimes not dissappearing |
| V1.0.2 | V1.0.2_7 | Many UI fixes |
| V1.0.2 | V1.0.2_8 | Fixed other smaller bugs |
| V1.0.1 | V1.0.1_1 | Added render scale setting |
| V1.0.1 | V1.0.1_2 | Updated some UI elements |
| V1.0.1 | V1.0.1_3 | Added hotkeys for trail drag lock and send pickups from stockpile |
| V1.0.1 | V1.0.1_4 | Changed a few key bindings |
| V1.0.1 | V1.0.1_5 | Rebalanced the later population objectives |
| V1.0.1 | V1.0.1_6 | Some tweaks in the concrete biome |
| V1.0.1 | V1.0.1_7 | Tweaked some visual stuff |
| V1.0.1 | V1.0.1_8 | More smaller tweaks and fixes |
| V1.0.0 | V1.0.0_1 | Optimized build size. |
| V1.0.0 | V1.0.0_2 | Improved performance with trail rendering. |
| V1.0.0 | V1.0.0_3 | Some changes in the instinct progression. |
| V1.0.0 | V1.0.0_4 | Several UI updates. |
| V1.0.0 | V1.0.0_5 | Rebalanced queen energy requirement for later stages |
| V1.0.0 | V1.0.0_6 | Added additional sound effects |
| V1.0.0 | V1.0.0_7 | Updated a few meshes |
| V1.0.0 | V1.0.0_8 | Final batch of translation in |
| V1.0.0 | V1.0.0_9 | Changed up some things in the toxic waste and concrete biome. |
| V1.0.0 | V1.0.0_10 | Lots of smaller tweaks and fixes. |
| V0.3.6 | V0.3.6_1 | Updated factory mesh |
| V0.3.6 | V0.3.6_2 | Buffed small beacon range |
| V0.3.6 | V0.3.6_3 | Fixed princesses and gynes being able to pickup items from buildings |
| V0.3.6 | V0.3.6_4 | Rearranged some things in the tech tree, ant launcher and catapult unlocked earlier |
| V0.3.6 | V0.3.6_5 | Rebalanced queen energy requirement, makes for faster feedback on how much energy per second you're giving (stage will be much higher on old saves but it will balance out eventually) |
| V0.3.6 | V0.3.6_6 | Updated some tutorial videos |
| V0.3.6 | V0.3.6_7 | Fixed some tutorials not showing at the right time |
| V0.3.6 | V0.3.6_8 | Fixed some canvas scaling issues with ultra wide |
| V0.3.6 | V0.3.6_9 | Tweaked some UI elements |
| V0.3.6 | V0.3.6_10 | More smaller changes... |
| V0.3.5 | V0.3.5_1 | Fix for the send items button not working. |
| V0.3.5 | V0.3.5_2 | Added an extra recipe to create digger ants. |
| V0.3.5 | V0.3.5_3 | Updated new meshes found in the concrete biome. |
| V0.3.4 | V0.3.4_1 | Made some UI updates |
| V0.3.4 | V0.3.4_2 | Fixed a bug with stockpile gate interface. |
| V0.3.4 | V0.3.4_3 | Fixed other smaller interface bugs. |
| V0.3.4 | V0.3.4_4 | Added and edited some objects found in later biomes |
| V0.3.3 | V0.3.3_1 | Some updates and fixes in the UI. |
| V0.3.2 | V0.3.2_1 | Changed small beacon model and cost. |
| V0.3.2 | V0.3.2_2 | Fixed a bug with buildings not finding action points after relocating. |
| V0.3.2 | V0.3.2_3 | Fixed a bug with counter gates giving an error unexpectedly. |
| V0.3.2 | V0.3.2_4 | Made a lot of buildings fit better on a grid (might look weird if build before this update, to fix: please demolish building and place again). |
| V0.3.2 | V0.3.2_5 | Tweaked stockpile highlight shader to save performance with full stockpiles. |
| V0.3.2 | V0.3.2_6 | Added some missing icons. |
| V0.3.2 | V0.3.2_7 | Fixed several other bugs. |
| V0.3.1 | V0.3.1_1 | Fixed a bug with the interface. |
| V0.3 | V0.3_1 | Update the on-click UI for many objects. |
| V0.3 | V0.3_2 | Added the possibility to manually send materials from one stockpile to the other. |
| V0.3 | V0.3_3 | Enabled French, German, Polish, Russian, Chinese Simplified, Korean and Japanese languages. |
| V0.3 | V0.3_4 | New models for T2 and T3 gynes. |
| V0.3 | V0.3_5 | Renamed bulb ants to "pod ants" |
| V0.3 | V0.3_6 | When their lifespan runs out, pod ants turn back into the empty variant, alowing them to be equipped with a new energy pod. |
| V0.3 | V0.3_7 | Loads of balance tweaks. |
| V0.3 | V0.3_8 | Added achievements. |
| V0.2.6 | V0.2.6_1 | Added 3 new types of gates |
| V0.2.6 | V0.2.6_2 | Added the main trail |
| V0.2.6 | V0.2.6_3 | Improved trail button flow |
| V0.2.6 | V0.2.6_4 | Added the deconstructor |
| V0.2.6 | V0.2.6_5 | Rearranged the development tree a bit |
| V0.2.6 | V0.2.6_6 | Added missing meshes, replaced a few |
| V0.2.6 | V0.2.6_7 | Glass deposits can now be found in the Toxic Wasteland |
| V0.2.6 | V0.2.6_8 | Loads of balance changes |
| V0.2.6 | V0.2.6_9 | Gynes required for progressing through the development tree, using a new currency |
| V0.2.6 | V0.2.6_10 | Added some extra tutorials |
| V0.2.6 | V0.2.6_11 | Added map mode hotkey 'M' |
| V0.2.6 | V0.2.6_12 | Added a floortile eraser |
| V0.2.6 | V0.2.6_13 | Lots of smaller fixes |
| V0.2.5 | V0.2.5_1 | Fixed gate trails sometimes not spawning with a gate, causing a save error |
| V0.2.5 | V0.2.5_2 | Fixed floortiles not propperly attaching to eachother |
| V0.2.5 | V0.2.5_3 | Visual tweaks in the development tree |
| V0.2.5 | V0.2.5_4 | Added an objective to find the jungle |
| V0.2.4 | V0.2.4_1 | Updated logic gates on click UI |
| V0.2.4 | V0.2.4_2 | Logic gates can now be configured before placement |
| V0.2.4 | V0.2.4_3 | Rearranged some things in the development tree |
| V0.2.4 | V0.2.4_4 | Added an objective to bring larvae to the second island |
| V0.2.4 | V0.2.4_5 | Updated material icons |
| V0.2.4 | V0.2.4_6 | Lots of smaller fixes |
| V0.2.3a | V0.2.3a_1 | Fixed the combiner not satisfying the instinct objective. |
| V0.2.3 | V0.2.3_1 | Fixed the combiner not appearing. |
| V0.2.3 | V0.2.3_2 | Added old gate, sort ants based on whether they're old or not. |
| V0.2.3 | V0.2.3_3 | Added big eraser. |
| V0.2.3 | V0.2.3_4 | Added counter end. |
| V0.2.3 | V0.2.3_5 | Switched some things around in the development tree, life gate is now unlocked in Tier 2. |
| V0.2.3 | V0.2.3_6 | Counter gate is now unlocked through instinct and not with the development tree anymore. |
| V0.2.3 | V0.2.3_7 | Changed some icons. |
| V0.2.3 | V0.2.3_8 | Smaller fixes. |
| V0.2.2 | V0.2.2_1 | Hotfix for an error causing to not loading a save. |
| V0.2.2 | V0.2.2_2 | Adjusted all buildings to fit on the grid. |
| V0.2.2 | V0.2.2_3 | Increased drone move speed a bit. |
| V0.2.1 | V0.2.1_1 | Fixed some problems with the feedback input field. |
| V0.2.1 | V0.2.1_2 | Fixed the island scanners spawning an outdated biome. |
| V0.2.1 | V0.2.1_3 | Better looking graph UI. |
| V0.2.1 | V0.2.1_4 | Added some UI to notice the player about the ant inventory. |
| V0.2.1 | V0.2.1_5 | Some smaller fixes... |
| V0.2.0 | V0.2.0_1 | Added Tier 2 and Tier 3 back to the development tree, more than doubling its size. |
| V0.2.0 | V0.2.0_2 | Improved the development tree with new background effects. |
| V0.2.0 | V0.2.0_3 | Added upgraded gynes for Tier 2 en Tier 3 |
| V0.2.0 | V0.2.0_4 | Added several new ant castes that double as requirements for the new gynes. |
| V0.2.0 | V0.2.0_5 | Added objective buildings. |
| V0.2.0 | V0.2.0_6 | New islands are now always revealed using the island scanner buildings. |
| V0.2.0 | V0.2.0_7 | Added the inventor tower, allowing you to harvest inventor points without having to click them. |
| V0.2.0 | V0.2.0_8 | Added the population graph where you map out to populations of individual ant castes. |
| V0.2.0 | V0.2.0_9 | Added a nuptial flight UI element that tracks the time until next flight and how many gynes you've flown out. |
| V0.2.0 | V0.2.0_10 | Added enhanced audio effects for the nuptial flight. |
| V0.2.0 | V0.2.0_11 | Ants that are now at the end of their lifespan now gain the old status effect, making them visually distinctive. |
| V0.2.0 | V0.2.0_12 | The UI when clicked on ants now appears at the bottom of the screen (to be implemented for all other objects). |
| V0.2.0 | V0.2.0_13 | Many bug fixes |
| V0.2.0 | V0.2.0_14 | Smaller stuff.. |
| V0.1.2 | V0.1.2_1 | Rearranged Tier 1 development tree. |
| V0.1.2 | V0.1.2_2 | Added the slinger, a smaller catapult with a shorter range (mesh still WIP). |
| V0.1.2 | V0.1.2_3 | Fixed the expired Discord link. |
| V0.1.1 | V0.1.1_1 | Revamped the UI. |
| V0.1.1 | V0.1.1_2 | Rearranged the development tree to be focussed around the population of the colony. Features content up to Tier 1. |
| V0.1.1 | V0.1.1_3 | Added a major objective; the production of gynes, which is introduced via the Instinct progression. |
| V0.1.1 | V0.1.1_4 | A report screen is shown after every nuptial flight, which gives you insight over your performance over the last cycle. |
| V0.1.1 | V0.1.1_5 | Added concrete floortiles, a floortile that can be build for free but requires to be adjacent to a concrete core. |
| V0.1.1 | V0.1.1_6 | Added a smaller energy storage and moved small beacons back to Tier 1. |
| V0.1.1 | V0.1.1_7 | Added version history UI element |
